# cv-reviewer-backend

./: .env.example  .gitignore  config.py  main.py  pyproject.toml  session_store.py
models/: schemas.py
prompts/: analyze_cv.txt  match_jd.txt
routers/: sessions.py
services/: analyzer.py  exporter.py  parser.py  recommender.py  scoring.py  uploader.py
tests/: test_uploader.py
