[project]
name = "cv-reviewer-backend"
version = "0.1.0"
description = "CV Reviewer Backend - FastAPI server for AI-powered CV analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pdfplumber==0.11.4",
    "python-docx==1.1.2",
    "openai==1.57.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-multipart==0.0.19",
    "reportlab==4.2.5",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["."]
